OLMIS-6740: fixed wrapping text in modal body

--- a/src/openlmis-modal/modal.scss
+++ b/src/openlmis-modal/modal.scss
@@ -19,7 +19,7 @@
 	.modal-body > p,
 	.modal-header > h1 {
 		overflow-wrap: break-word;
-		word-break: break-all;
+		word-break: break-word;
 	}
 
 	.modal-footer{
